@@ -91,3 +91,5 @@
 13-Mar-2023 V0.95 Updates to PubChem workflow to use multiprocess count, disable git stash testing, remove obsolete entries from test data
 12-Apr-2023 V0.96 Add CARD ontology data to tree builder
  1-Jun-2023 V0.97 Don't back up resources to GitHub during cache update workflows
+ 8-Aug-2023 V0.98 Reduce memory and cpu footprint for Azure test cases;
+                  Load full (unfiltered) taxonomy tree node list
